tests/sema/golden/02_let_type_mismatch.out
tests/sema/bad/02_let_type_mismatch.sg:1:1: error: let initializer: type mismatch (int vs float)
  let a:int = 3.14;
  ^
